fix contrast issues in compose box

--- a/app/javascript/flavours/glitch/styles/components/compose_form.scss
+++ b/app/javascript/flavours/glitch/styles/components/compose_form.scss
@@ -51,8 +51,8 @@
     padding: 10px;
     width: 100%;
     outline: 0;
-    color: $inverted-text-color;
-    background: $simple-background-color;
+    color: $classic-secondary-color;
+    background: $classic-base-color;
     font-size: 14px;
     font-family: inherit;
     resize: vertical;
@@ -576,7 +576,7 @@
   display: flex;
   align-items: center;
   padding: 10px;
-  color: $inverted-text-color;
+  color: $classic-secondary-color;
   cursor: pointer;
 
   .privacy-dropdown__option__content {
@@ -589,7 +589,7 @@
 
     strong {
       display: block;
-      color: $inverted-text-color;
+      color: $classic-secondary-color;
       font-weight: 500;
     }
   }
